# yolov12-industrial-defect-inspection

./: .gitignore  CMakeLists.txt  README.md  requirements-yolo.txt
configs/: config.yaml
data/: README.md
docs/: resume_project.md
docs/assets/: inspection_summary.txt
include/: Config.h  Evaluator.h  InspectionReport.h  OnnxYoloDetector.h  TraditionalDefectDetector.h  Types.h  Visualizer.h  YoloLabelReader.h
models/: README.md
scripts/: build_onnx_release.ps1  build_release.ps1  download_onnxruntime.ps1  evaluate_neu_valid.ps1  export_yolo12_onnx.py  export_yolo12_onnx_local.ps1  package_release.ps1  polars.py  run_dataset_batch_onnx.ps1  run_dataset_realtime_onnx.ps1  run_demo.ps1  setup_yolo_env.ps1  train_yolo12_neu.py  train_yolo12_neu_local.ps1
src/: Config.cpp  Evaluator.cpp  InspectionReport.cpp  OnnxYoloDetector.cpp  TraditionalDefectDetector.cpp  Visualizer.cpp  YoloLabelReader.cpp  main.cpp
